--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,55 +1,68 @@
 <div class="container mt-5">
-    <h2 class="mb-4">Shopping Cart</h2>
-    <div class="row">
-      <div class="col-md-8">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Product</th>
-              <th scope="col">Price</th>
-              <th scope="col">Quantity</th>
-              <th scope="col">Total</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Example product in the cart -->
-            <tr>
-              <td>Product 1</td>
-              <td>$50.00</td>
-              <td>
-                <input type="number" (change)="onInputChange()" class="form-control" value="1" min="1">
-              </td>
-              <td>$50.00</td>
-              <td>
-                <button class="btn btn-danger btn-sm">Remove</button>
-              </td>
-            </tr>
-            <!-- Add more products in the cart as needed -->
-          </tbody>
-        </table>
-      </div>
-      <div class="col-md-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Cart Summary</h5>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Subtotal:
-                <span>$50.00</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Tax (10%):
-                <span>$5.00</span>
-              </li>
-              <li class="list-group-item d-flex justify-content-between align-items-center">
-                Total:
-                <span>$55.00</span>
-              </li>
-            </ul>
-            <button class="btn btn-primary btn-block mt-3">Proceed to Checkout</button>
-          </div>
+  <h2 class="mb-4">Shopping Cart</h2>
+  <div class="row">
+    <div class="col-md-8">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Product</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Item Total</th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let item of checkOutItemsCollection">
+          <tr>
+            <td>{{ item.cardTitle }}</td>
+            <td>${{ item.price }}</td>
+            <td>
+              <div class="d-flex justify-content-start align-items-center">
+                <div>
+                  <a (click)="minus(item)" style="cursor: pointer">
+                    <img src="../../assets/images/minus.svg" alt="Minus" />
+                  </a>
+                </div>
+                <div
+                  style="
+                    font-size: 1.2rem;
+                    margin-left: 0.5rem;
+                    margin-right: 0.5rem;
+                  "
+                >
+                  {{ item.quantity }}
+                </div>
+                <div>
+                  <img
+                    src="../../assets/images/add.svg"
+                    alt="Add"
+                    style="cursor: pointer"
+                    (click)="add(item)"
+                  />
+                </div>
+              </div>
+            </td>
+            <td>{{ item.totalPrice }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Cart Summary</h5>
+          <ul class="list-group list-group-flush">
+            <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              Total:
+              <span>{{ subTotalValue }}</span>
+            </li>
+          </ul>
+          <button class="btn btn-primary btn-block mt-3">
+            Proceed to Checkout
+          </button>
         </div>
       </div>
     </div>
   </div>
+</div>
