--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -7,7 +7,9 @@
           <div class="product-title">{{ item.cardTitle }}</div>
           <div class="product-subtitle">{{ item.cardText }}</div>
           <div class="product-price">${{ item.price }}</div>
-          <button class="btn btn-buy" (click)="onAddCart(item)">Add to Cart</button>
+          <button class="btn btn-buy" (click)="onAddCart(item)">
+            Add to Cart
+          </button>
         </div>
       </div>
     </div>
